# TreeShadeMapper

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  image_process.py  pyproject.toml  requirements_dev.txt  solar_data_process.py  tox.ini  visualization.py
.github/: ISSUE_TEMPLATE.md
data/: frames.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/canopy_shade/: __init__.py  canopy_shade.py  cli.py  image_process.py  solar_data_process.py  visualization.py
src/tree_shade_mapper/: __init__.py  cli.py  image_process.py  solar_data_process.py  tree_shade_mapper.py  visualization.py
tests/: __init__.py  test_canopy_shade.py
