[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_shade_mapper"
version = "0.0.6"
description = "Python package to calculate the shading effect of tree canopies from panoramic imagery"
readme = "README.rst"
authors = [
  {name = "Kunihiko Fujiwara", email = "kunihiko@nus.edu.sg"}
]
maintainers = [
  {name = "Kunihiko Fujiwara", email = "kunihiko@nus.edu.sg"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "zensvi==0.11.0",
    "typer",
    "pandas",
    "pvlib",
    "folium",
    "branca",
    "h3",
    "seaborn",
    "geopandas",
    "shapely",
    "numpy",
    "matplotlib",
    "contextily",
    "pillow",
    "scipy",
    "opencv-python",
    "pytz",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/changelog.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

